Penambahan animasi untuk CSS

--- a/src/components/sharedscomponent/header-web-detail.html
+++ b/src/components/sharedscomponent/header-web-detail.html
@@ -3,7 +3,7 @@
         <div class="ui container">
             <div class="ui inverted secondary menu">
                 <a class="header item" href="/">
-                    <img class="logo" src="@/assets/logo_net.png">
+                    <img class="logo" src="@/assets/logo_net.png" alt="logoheader">
                 </a>
                 <a class="item">
                     <router-link v-bind:to="{name: 'BeritaFeeds'}" exact>Beranda</router-link>
