--- a/src/components/aboutapp/tentang-app.html
+++ b/src/components/aboutapp/tentang-app.html
@@ -2,7 +2,7 @@
     <header-web-tentang></header-web-tentang>
     <div class="ui container padding-list">
         <div class="ui icon floating message">
-            <i class="orange rss square icon"></i>
+            <i class="blue rss square icon"></i>
             <div class="content">
                 <div class="header">
                     Blog WWWID Web App 1.0.0 @ {{getTanggalSekarang}}
